--- a/main.html
+++ b/main.html
@@ -8,7 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>Taj Mahal</h1>
+	<br/>
+	<p>It was built by Mughal Emperor Shah
+Jahan in memory of his wife Mumtaz Mahal.</p>
+	<ol>
+		<li><b><i>Color</li>
+		<li><b><i>Size</li>
+		<li><b><i>Height</li>
+		<li><b><i>Weight</li>
+		<li><b><i>Large</li>
+	</ol>
+	<ul>
+		<li><b><i>Rice</li>
+		<li><b><i>Panner</li>
+		<li><b><i>ice-cream</li>
+		<li><b><i>Coconut</li>
+		<li><b><i>Pav-bhaji</li>
+	</ul>
+	
 </script>
 
 </body>
